--- a/drawing.html
+++ b/drawing.html
@@ -14,6 +14,8 @@
             <div class="timer">
                 <!-- Timer form tbd -->
             </div>
+                <canvas id="demoCanvas"/>
+            </div>
             <div class="drawing_area">
                 <button class="enter_button">Save</button>
             </div>
