--- a/public/canvas.html
+++ b/public/canvas.html
@@ -23,6 +23,10 @@
   <input type="number" id="sizepicker" min="1" value="5" oninput="changeSize()">
 
   <script src="canvas.js"></script>
+    
+  <form action="waiting.html">
+    <input type="submit" value="Go to waiting" />
+  </form>
   </div>
   </body>
 </html>
