--- a/public/lobby.html
+++ b/public/lobby.html
@@ -15,5 +15,8 @@
             </div>
         </div>
         <button class="start_button">Begin</button>
+        <form action="prompt.html">
+          <input type="submit" value="Go to prompt" />
+        </form>
     </body>
 </html>
