--- a/public/prompt.html
+++ b/public/prompt.html
@@ -17,6 +17,9 @@
             </p>
             <input type="text" class="input_prompt" placeholder="Enter Prompt Here" />
             <button class="enter_button">Enter</button>
+            <form action="canvas.html">
+              <input type="submit" value="Go to canvas" />
+            </form>
         </div>
         
     </body>
