--- a/public/results.html
+++ b/public/results.html
@@ -15,6 +15,9 @@
                     <!-- Drawings here -->
                 </div>
             </div>
+            <form action="home.html">
+              <input type="submit" value="Go to home" />
+            </form>
         </div>
         
     </body>
