--- a/public/waiting.html
+++ b/public/waiting.html
@@ -16,6 +16,8 @@
                 
             </div>
         </div>
-        
+        <form action="results.html">
+          <input type="submit" value="Go to results" />
+        </form>
     </body>
 </html>
