--- a/public/results.html
+++ b/public/results.html
@@ -10,7 +10,7 @@
     <body>
         <div class="results">
             <div class="player_results">
-                <p>Player Name Here/p>
+                <p>Player Name Here</p>
                 <div class="player_drawings">
                     <!-- Drawings here -->
                 </div>
