--- a/public/lobby.html
+++ b/public/lobby.html
@@ -16,7 +16,7 @@
         </div>
         <button class="start_button">Begin</button>
         <form action="prompt.html">
-          <input type="submit" value="Go to prompt" />
+          <input class="enter_button" type="submit" value="Go to prompt" />
         </form>
     </body>
 </html>
