--- a/public/prompt.html
+++ b/public/prompt.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="prompt.css">
         <title>Prompt Page</title>
         <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='cups.css') }}" />
         <script type="text/javascript" src="{{ url_for('static', filename='cups.js') }}" ></script> -->
