--- a/public/results.html
+++ b/public/results.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <form action="home.html">
-              <input type="submit" value="Go to home" />
+              <input class="enter_button" type="submit" value="Go to home" />
             </form>
         </div>
         
