--- a/public/waiting.html
+++ b/public/waiting.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <form action="results.html">
-          <input type="submit" value="Go to results" />
+          <input class="enter_button" type="submit" value="Go to results" />
         </form>
     </body>
 </html>
