Saved prompt and canvas as variables

--- a/public/canvas.html
+++ b/public/canvas.html
@@ -22,8 +22,10 @@
   <label for="sizepicker">Change Brush Size:</label>
   <input type="number" id="sizepicker" min="1" value="5" oninput="changeSize()">
 
-  <script src="canvas.js"></script>
+  <script src="Canvas.js"></script>
     
+  <button class="enter_button" onclick="saveCanvas()">Enter</button>
+
   <form action="waiting.html">
     <input type="submit" value="Go to waiting" />
   </form>
