--- a/public/betalobby.html
+++ b/public/betalobby.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE HTML>
 <html lang="en">
-<link rel="stylesheet" href="lobby.css" type="text/css" />
+<link rel="stylesheet" href="main.css" type="text/css" />
 
     <head>
 
@@ -19,7 +19,7 @@
             </h1>
     
         </div>
-        <div style = "position:relative; left:150px; top:80px">
+        <div class = "gamecodetext">
 
             <h2>
                 Game Code
