fixed main waiting

--- a/public/betamainwaiting.html
+++ b/public/betamainwaiting.html
@@ -21,26 +21,31 @@
             
         </div>
 
-        <div style = "position:relative; left:550px; top:75px">
+        <div align = "center">
 
             <div class="lobbybox">
                 Names from the server that are already done
             </div>
 
         </div>
-
-        <div style = "position:relative; left:150px; top:57px">
+        <br>
+        </br>
+        <div align = "center">
 
             <div class="lobbybox">
-                Names from the server that are already done
+                Names from the server are notdone
             </div>
 
         </div>
 
 
-        <div style = "position:relative; left:400px; top:300px">
+        <div align = "center">
 
-            Time Remaining: 
+            <h2>
+
+                Time Remaining: 
+
+            </h2> 
 
         </div>
 
