fixed canvas page

--- a/public/betacanvas.html
+++ b/public/betacanvas.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE HTML>
 <html lang="en">
-<link rel="stylesheet" href="lobby.css" type="text/css" />
+<link rel="stylesheet" href="main.css" type="text/css" />
 
     <head>
 
@@ -57,7 +57,7 @@
         <div align="center">
 
             <button class="next_button">
-                I'm done Drawing!
+                I'm done drawing!
             </button>
     
         </div>
