--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -276,13 +276,15 @@
             });
 
 
-            socket.on("playerToWaitingRoom", function(players) {
-                switchView("lobbyPage"); //Will be a different page
-                console.log('In lobbyPage:', players);
-            
+            socket.on("addPlayerToWaitingList", function(players) {
                 playerUsernames = players.map((player) => player.username);
                 console.log('playerUsernames:', playerUsernames.join('<br>'));
                 playerList.innerHTML = playerUsernames.join('<br>');
+            });
+
+
+            socket.on("playerToWaitingRoom", function() {
+                switchView("lobbyPage"); //Will be a different page
             });
 
 
