--- a/public/prompt.html
+++ b/public/prompt.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="prompt.css">
+        <script src="./javascript/prompt.js" defer></script>
         <title>Prompt Page</title>
         
         <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='cups.css') }}" />
@@ -27,8 +28,6 @@
               <input type="submit" value="Go to canvas" />
             </form>
         </div>
-
-        <script src="Prompt.js"></script>
         
     </body>
 </html>
