--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -282,10 +282,13 @@
               canvasPage: document.getElementById("canvasPage")
             };
 
+            const lobbyIDInput = document.getElementById("lobbyIDInput");
+            const usernameInput = document.getElementById("usernameInput");
             const lobbyIDDisplay = document.getElementById("lobbyIDDisplay");
             const playerList = document.getElementById("playerList");
             const playerListPlayer = document.getElementById("playerListPlayer");
             const finishedPlayers = document.getElementById("finishedPlayers");
+            const promptValue = document.getElementById("prompt").value;
             
             
             /* Utility Functions */
