--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -198,6 +198,15 @@
 
         <!--Waiting for next round screen-->
         <div id="waitingNextRoundPage" style="display:none">
+            <svg class="promptTimer"  viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <g class="promptTimerCircle">
+                  <circle class="promptTimepath" cx="50" cy="50" r="45" />
+                </g>
+            </svg>
+            <span class="timerLablel" onload="TimeLeft()" align = "center">
+            </span>
+            
+
             <div align="center">
 
                 <h1>
