--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -384,6 +384,7 @@
             
 
             socket.on("playerToCanvas", function() {
+                document.getElementById("prompt").value = "";
                 switchView("canvasPage");
             });
 
