Fixed overwritten code & cleared canvas

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -384,6 +384,9 @@
 
 
             socket.on("playerToPrompt", function() {
+                if(document.getElementById("canvas")) {
+                    document.getElementById("canvas").clear();
+                }
                 switchView("promptPage");
             });
 
