--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -543,7 +543,7 @@
             // Set the date we're counting down to
             // var countDownDate = new Date("Jan 5, 2024 15:37:25").getTime();
             
-            var startDate = new Date().getTime();
+            var startDate = new Date();
             startDate.setSeconds(startDate.getSeconds() + 60);
             // var startSec = Math.floor((distance % (1000 * 60)) / 1000);
             // var start = startSec + 60;
