adding more books and their id

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -396,14 +396,19 @@
            
             <table align="center">
                 <tr>
-                  <td style="padding: 20px;"><div class="box"></div></td>
-                  <td style="padding: 20px;"><div class="box"></div></td>
-                  <td style="padding: 20px;"><div class="box"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book1"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book2"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book3"></div></td>
                 </tr>
                 <tr>
-                  <td style="padding: 20px;"><div class="box"></div></td>
-                  <td style="padding: 20px;"><div class="box"></div></td>
-                  <td style="padding: 20px;"><div class="box"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book4"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book5"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book6"></div></td>
+                </tr>
+                <tr>
+                  <td style="padding: 20px;"><div class="box" id="book7"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book8"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book9"></div></td>
                 </tr>
               </table>
               
