--- a/public/endgameresultsA.html
+++ b/public/endgameresultsA.html
@@ -29,14 +29,19 @@
        
         <table align="center">
             <tr>
-              <td style="padding: 20px;"><div class="box1"></div></td>
-              <td style="padding: 20px;"><div class="box1"></div></td>
-              <td style="padding: 20px;"><div class="box1"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book1"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book2"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book3"></div></td>
             </tr>
             <tr>
-              <td style="padding: 20px;"><div class="box1"></div></td>
-              <td style="padding: 20px;"><div class="box1"></div></td>
-              <td style="padding: 20px;"><div class="box1"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book4"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book5"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book6"></div></td>
+            </tr>
+            <tr>
+              <td style="padding: 20px;"><div class="box1" id="book7"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book8"></div></td>
+              <td style="padding: 20px;"><div class="box1" id="book9"></div></td>
             </tr>
           </table>
           
