Revert "After 5 rounds going to the end game screen and each book goes to the end game viewing screen. The player pages go back to the join game screen for now."
This reverts commit c464d833dbec5fec3f1b87fe4371f5c1edca2c47.

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -407,19 +407,19 @@
            
             <table align="center">
                 <tr>
-                  <td style="padding: 20px;"><div class="box" id="book1" onclick="book1Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book2" onclick="book2Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book3" onclick="book3Clicked()"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book1"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book2"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book3"></div></td>
                 </tr>
                 <tr>
-                  <td style="padding: 20px;"><div class="box" id="book4" onclick="book4Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book5" onclick="book5Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book6" onclick="book6Clicked()"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book4"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book5"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book6"></div></td>
                 </tr>
                 <tr>
-                  <td style="padding: 20px;"><div class="box" id="book7" onclick="book7Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book8" onclick="book8Clicked()"></div></td>
-                  <td style="padding: 20px;"><div class="box" id="book9" onclick="book9Clicked()"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book7"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book8"></div></td>
+                  <td style="padding: 20px;"><div class="box" id="book9"></div></td>
                 </tr>
               </table>
               
@@ -469,31 +469,24 @@
               waitingNextRoundPage: document.getElementById("waitingNextRoundPage"),
               canvasPage: document.getElementById("canvasPage"),
               mainCanvasPage: document.getElementById("mainCanvasPage"),
-              mainPromptPage: document.getElementById("mainPromptPage"),
-              endgamechoose: document.getElementById("endgamechoose"),
-              endgameresults: document.getElementById("endgameresults")
+              mainPromptPage: document.getElementById("mainPromptPage")
             };
 
             const lobbyIDInput = document.getElementById("lobbyIDInput");
             const usernameInput = document.getElementById("usernameInput");
             const lobbyIDDisplay = document.getElementById("lobbyIDDisplay");
-
             const playerList = document.getElementById("playerList");
             const playerListPlayer = document.getElementById("playerListPlayer");
             const finishedPlayers = document.getElementById("finishedPlayers");
             const unfinishedPlayers = document.getElementById("unfinishedPlayers");
-
             const mainPromptFinishedPlayers = document.getElementById("mainPromptFinishedPlayers");
             const mainPromptUnfinishedPlayers = document.getElementById("mainPromptUnfinishedPlayers");
             const mainCanvasFinishedPlayers = document.getElementById("mainCanvasFinishedPlayers");
             const mainCanvasUnfinishedPlayers = document.getElementById("mainCanvasUnfinishedPlayers");
-
             const promptValue = document.getElementById("prompt").value;
             const promptToDraw = document.getElementById("promptToDraw");
-
             const canvasDrawing = document.getElementById('canvas');
             const canvasForPrompt = document.getElementById('canvasForPrompt');
-
             //const savedCanvas = canvasDrawing.toObject();
             //const savedCanvas = new fabric.Image(canvasDrawing);
             //const promptsQueue = [];
@@ -563,46 +556,6 @@
                 //const savedCanvas = new fabric.Image(canvasDrawing);
                 socket.emit("canvasEntered", usernameInput.value, lobbyIDInput.value, savedCanvas);
             }
-
-
-            /* End Game Book Buttons */
-
-            function book1Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book2Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book3Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book4Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book5Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book6Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book7Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book8Clicked(){
-                switchView("endgameresults");
-            }
-
-            function book9Clicked(){
-                switchView("endgameresults");
-            }
-
 
             /* Socket Functionality */
 
@@ -705,14 +658,6 @@
                 mainCanvasFinishedPlayers.innerHTML = "Cool People with beautiful drawings:<br>";
                 mainCanvasUnfinishedPlayers.innerHTML = "People who draw slow:<br>";
                 switchView("mainCanvasPage");
-            });
-
-            socket.on("playersToEndgame", function() {
-                switchView("mainPage")
-            });
-
-            socket.on("mainToEndgame", function() {
-                switchView("endGameChoose")
             });
 
             // change the status of the timer
