Added game name

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -15,7 +15,7 @@
             <div align="center">
 
                 <h1>
-                    Welcome to ... (game name)
+                    Welcome to Pictionary Telephone
                 </h1>
         
             </div>
@@ -50,7 +50,7 @@
                 </h2>
     
                 <p class="description">
-                    Welcome to ...  ...is a drawing version of the classic game, Telephone. 
+                    Welcome to Pictionary Telephone. Pictionary Telephone is a drawing version of the classic game, Telephone. 
                     The game will consist of multiple rounds that are either prompt rounds or 
                     drawing rounds. In the 
                     initial prompt round, players will have to come up with a prompt. Then it will be a drawing round
