--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -283,7 +283,7 @@
             </div>
 
           <!--Set up canvas & quick version of setting up fabric-->
-            <canvas id="canvas" width="1000" height="500" style="border:1px solid #000000;"></canvas>
+            <canvas id="canvas" width="600%" height="400%" style="border:1px solid #000000;"></canvas>
             <script src="https://cdn.jsdelivr.net/npm/fabric"></script>
           
             <label for="colorpicker" style="color:white">Change Color:</label>
