made the initial prompt page with no canvas better

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -201,7 +201,14 @@
          
 
             <div align="center">
+
+                <h1>
+                    Give us your best prompt!
+                </h1>
+
                 <textarea name="text" id="prompt" rows="8"  wrap="soft" placeholder="Enter Prompt Here"> </textarea>
+                <br>
+                </br>
                 <button class="enter_button" id="submitPrompt" onclick="enterPromptButtonClicked()">Enter</button>
             </div>
             
