fixed name of prompt page with canvas

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -215,7 +215,7 @@
         </div>
 
         <!--Prompt screen-->
-        <div id="promptPage" style="display:none">
+        <div id="promptPageWithCanvas" style="display:none">
          
             <div align="center">
                 <h2>
